[package]
name = "interrogator"
version = "0.1.0"
authors = ["Jay R. <jay@rovacsek.com>"]
edition = "2018"

[dependencies]
regex = "1"
serde = "1.0"
rayon = "1.1"
hyper = "0.14"
futures = "0.3"
serde_json = "1.0"
itertools = "0.8.0"
tokio-core = "0.1"
rpassword = "4.0.3"
serde_derive = "1.0"
lazy_static = "1.3.0"
clap = {version = "~2.33.0", features = ["yaml"]}
chrono = { version = "0.4", features = ["serde"] }
