[package]
name = "engine"
version = "0.1.0"
authors = ["jrovacsek <jay@rovacsek.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "3.0.2"
regex = "1"
rayon = "1.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }

input = {path = "../input"}
options = {path = "../options"}
